--- a/ConstructionSite.Extensions/ConstructionSite.Extensions.csproj
+++ b/ConstructionSite.Extensions/ConstructionSite.Extensions.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\ConstructionSite.Repository\ConstructionSite.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Seed\" />
+  </ItemGroup>
+
 </Project>
