--- a/ConstructionSite.Entity/ConstructionSite.Entity.csproj
+++ b/ConstructionSite.Entity/ConstructionSite.Entity.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
