--- a/ConstructionSite.Extensions/ConstructionSite.Extensions.csproj
+++ b/ConstructionSite.Extensions/ConstructionSite.Extensions.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConstructionSite.Entity\ConstructionSite.Entity.csproj" />
     <ProjectReference Include="..\ConstructionSite.Repository\ConstructionSite.Repository.csproj" />
   </ItemGroup>
 
