--- a/ConstructionSite/appsettings.json
+++ b/ConstructionSite/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Naib": "Server=.;Database=EFGetStarted;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
