--- a/ConstructionSite.Entity/ConstructionSite.Entity.csproj
+++ b/ConstructionSite.Entity/ConstructionSite.Entity.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
