--- a/ConstructionSite/appsettings.json
+++ b/ConstructionSite/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Naib": "Server=.;Database=EFGetStarted;Trusted_Connection=True;"
+    "Naib": "Server=DESKTOP-3B93ABP\\SQLEXPRESS;Database=Blogging;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
