--- a/ConstructionSite.Helpers/ConstructionSite.Helpers.csproj
+++ b/ConstructionSite.Helpers/ConstructionSite.Helpers.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.11.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
@@ -25,6 +26,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="3.1.5" />
+    <PackageReference Include="MimeKit" Version="2.8.0" />
   </ItemGroup>
 
   <ItemGroup>
