Program.cs file-sinde adminPanelin loginini ucun username ve passwordu qeyd etdim

--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\ConstructionAdmin\Data\" />
+    <Folder Include="Areas\ConstructionAdmin\Views\Account\" />
     <Folder Include="ViewComponents\" />
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
   </ItemGroup>
