--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -22,9 +22,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConstructionSite.DTO\ConstructionSite.DTO.csproj" />
     <ProjectReference Include="..\ConstructionSite.Entity\ConstructionSite.Entity.csproj" />
     <ProjectReference Include="..\ConstructionSite.Extensions\ConstructionSite.Extensions.csproj" />
     <ProjectReference Include="..\ConstructionSite.Helpers\ConstructionSite.Helpers.csproj" />
@@ -32,7 +34,6 @@
 
   <ItemGroup>
     <Folder Include="Areas\ConstructionAdmin\Data\" />
-    <Folder Include="Areas\ConstructionAdmin\Views\Account\" />
     <Folder Include="ViewComponents\" />
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
   </ItemGroup>
