--- a/ConstructionSite/appsettings.json
+++ b/ConstructionSite/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConstructionSite": "Server=.;Database=Blogging;Trusted_Connection=True;"
+    "ConstructionSite": "Server=.;Database=EFGetStarted;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
