--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -34,6 +34,7 @@
     <Folder Include="Areas\ConstructionAdmin\Data\" />
     <Folder Include="ViewComponents\" />
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
+    <Folder Include="wwwroot\images\about\" />
   </ItemGroup>
 
   <ItemGroup>
