--- a/ConstructionSite.DTO/ConstructionSite.DTO.csproj
+++ b/ConstructionSite.DTO/ConstructionSite.DTO.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConstructionSite.Entity\ConstructionSite.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
