--- a/ConstructionSite.Entity/ConstructionSite.Entity.csproj
+++ b/ConstructionSite.Entity/ConstructionSite.Entity.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConstructionSite.Helpers\ConstructionSite.Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
