--- a/ConstructionSite.DTO/ConstructionSite.DTO.csproj
+++ b/ConstructionSite.DTO/ConstructionSite.DTO.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\ConstructionSite.Entity\ConstructionSite.Entity.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FrontViewModels\SubService\" />
+  </ItemGroup>
+
 </Project>
