--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -7,9 +7,13 @@
 
   <ItemGroup>
     <Compile Remove="Areas\ConstructionAdmin\Data\**" />
+    <Compile Remove="Areas\ConstructionAdmin\Views\Contact\Models\**" />
     <Content Remove="Areas\ConstructionAdmin\Data\**" />
+    <Content Remove="Areas\ConstructionAdmin\Views\Contact\Models\**" />
     <EmbeddedResource Remove="Areas\ConstructionAdmin\Data\**" />
+    <EmbeddedResource Remove="Areas\ConstructionAdmin\Views\Contact\Models\**" />
     <None Remove="Areas\ConstructionAdmin\Data\**" />
+    <None Remove="Areas\ConstructionAdmin\Views\Contact\Models\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,7 +44,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\ConstructionAdmin\Views\Contact\Models\" />
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
     <Folder Include="wwwroot\images\about\" />
   </ItemGroup>
