--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -45,6 +45,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
+    <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\images\about\" />
   </ItemGroup>
 
