--- a/ConstructionSite/appsettings.json
+++ b/ConstructionSite/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "ConstructionSite": "Server=.;Database=EFGetStarted;Trusted_Connection=True;"
+    //"ConstructionSite": "Server=.;Database=EFGetStarted;Trusted_Connection=True;"
+    "ConstructionSite": "Data Source=SQL5063.site4now.net;Initial Catalog=DB_A50C2A_ConstructionSite;User Id=DB_A50C2A_ConstructionSite_admin;Password=Construction123;MultipleActiveResultSets=true"
   },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
