--- a/ConstructionSite/appsettings.json
+++ b/ConstructionSite/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConstructionSite": "Server=DESKTOP-3B93ABP\\SQLEXPRESS;Database=ConstructionSite;Trusted_Connection=True;"
+    "ConstructionSite": "Data Source=SQL5063.site4now.net;Initial Catalog=DB_A50C2A_ConstructionSite;User Id=DB_A50C2A_ConstructionSite_admin;Password=Construction123"
   },
   "Logging": {
     "LogLevel": {
