--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -48,6 +48,7 @@
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\images\about\" />
     <Folder Include="wwwroot\images\service\" />
+    <Folder Include="wwwroot\customer\" />
   </ItemGroup>
 
   <ItemGroup>
