--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -46,10 +46,10 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
+    <Folder Include="wwwroot\customer\js\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\images\about\" />
     <Folder Include="wwwroot\images\service\" />
-    <Folder Include="wwwroot\customer\" />
   </ItemGroup>
 
   <ItemGroup>
