--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -50,6 +50,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\ConstructionAdmin\assets\jquery-file-upload\server\php\files\thumbnail\" />
+    <Folder Include="wwwroot\customer\Files\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\images\about\" />
     <Folder Include="wwwroot\images\service\" />
