--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -8,6 +8,7 @@
 <PropertyGroup>
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
     <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
+    <UserSecretsId>a182fefd-c83e-46e9-9b0a-3218e964473d</UserSecretsId>
 </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Areas\ConstructionAdmin\Data\**" />
