Js-folderlerinin yollarini duzeltdim

--- a/ConstructionSite/ConstructionSite.csproj
+++ b/ConstructionSite/ConstructionSite.csproj
@@ -60,22 +60,22 @@
     <None Include="wwwroot\Assets\font\construction\fontello.woff2" />
     <None Include="wwwroot\Assets\font\fontawesome\fontawesome-webfont.svg" />
     <None Include="wwwroot\Assets\font\fontawesome\fontawesome-webfont.woff2" />
-    <None Include="wwwroot\Assets\js\animsition.js" />
-    <None Include="wwwroot\Assets\js\bigvideo.js" />
-    <None Include="wwwroot\Assets\js\bootstrap.min.js" />
-    <None Include="wwwroot\Assets\js\countTo.js" />
-    <None Include="wwwroot\Assets\js\cube.portfolio.js" />
-    <None Include="wwwroot\Assets\js\fitText.js" />
-    <None Include="wwwroot\Assets\js\flexslider.js" />
-    <None Include="wwwroot\Assets\js\gmap3.min.js" />
-    <None Include="wwwroot\Assets\js\jquery.min.js" />
-    <None Include="wwwroot\Assets\js\main.js" />
-    <None Include="wwwroot\Assets\js\owlCarousel.js" />
-    <None Include="wwwroot\Assets\js\plugins.js" />
-    <None Include="wwwroot\Assets\js\rev-slider.js" />
-    <None Include="wwwroot\Assets\js\validate.js" />
-    <None Include="wwwroot\Assets\js\vegas.js" />
-    <None Include="wwwroot\Assets\js\video.js" />
+    <None Include="wwwroot\Assets\Js\animsition.js" />
+    <None Include="wwwroot\Assets\Js\bigvideo.js" />
+    <None Include="wwwroot\Assets\Js\bootstrap.min.js" />
+    <None Include="wwwroot\Assets\Js\countTo.js" />
+    <None Include="wwwroot\Assets\Js\cube.portfolio.js" />
+    <None Include="wwwroot\Assets\Js\fitText.js" />
+    <None Include="wwwroot\Assets\Js\flexslider.js" />
+    <None Include="wwwroot\Assets\Js\gmap3.min.js" />
+    <None Include="wwwroot\Assets\Js\jquery.min.js" />
+    <None Include="wwwroot\Assets\Js\main.js" />
+    <None Include="wwwroot\Assets\Js\owlCarousel.js" />
+    <None Include="wwwroot\Assets\Js\plugins.js" />
+    <None Include="wwwroot\Assets\Js\rev-slider.js" />
+    <None Include="wwwroot\Assets\Js\validate.js" />
+    <None Include="wwwroot\Assets\Js\vegas.js" />
+    <None Include="wwwroot\Assets\Js\video.js" />
     <None Include="wwwroot\Includes\contact\contact-process.php" />
     <None Include="wwwroot\Includes\rev-slider\css\closedhand.123" />
     <None Include="wwwroot\Includes\rev-slider\css\openhand.123" />
